# nova-raid

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: architecture.md  build-and-flash.md  hardware.md  index.html  troubleshooting.md
src/: config.h  main.c
src/game/: audio_seq.c  boss.c  diag.c  entities.c  game.c  game.h  hiscore.c  hud.c  ledfx.c  starfield.c  waves.c
src/gfx/: gfx.c  gfx.h  sprites.c  sprites.h
src/hal/: hal.h  hal_pico.c  st7796.c  st7796.h  ws2812.pio
tools/: gen_banner.py  gen_sprites.py
tools/host/: Makefile  hal_host.c  main.c
